[[bin]]
name = "Queue"
path = "Source/Library.rs"

[build-dependencies]
serde = { version = "1.0.217", features = ["derive"] }
toml = { version = "0.8.20" }

[dependencies]
clap = { version = "4.5.30", features = ["cargo", "derive"] }
dashmap = { version = "6.1.0" }
dotenv = { version = "0.15" }
futures = { version = "0.3.31" }
git2 = { version = "0.20.0" }
itertools = { version = "0.14.0" }
num_cpus = { version = "1.16.0" }
octocrab = { version = "0.43.0" }
proc_use = { version = "0.2.1" }
rayon = { version = "1.10.0" }
regex = { version = "1.11.1" }
rusqlite = { version = "0.33.0", features = ["bundled"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.138" }
tokio = { version = "1.43", features = ["full"] }
toml = { version = "0.8.20" }
unbug = { version = "0.4.0" }
walkdir = { version = "2.5.0" }

[package]
autobenches = false
autobins = false
autoexamples = false
autotests = false
default-run = "Queue"
documentation = "https://Documentation.Queue.Editor.Land"
edition = "2024"
homepage = "https://Queue.Editor.Land"
license-file = "LICENSE"
name = "Queue"
publish = false
repository = "https://github.com/CodeEditorLand/Queue"
version = "0.0.1"
